--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <h3>Get in touch at okorodudukenele@gmail.com </h3>
     </div>
     <section>
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo"
+        <a href="Alx-logo" target="-blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo">
+        </a>
     </section>
 
 </body>
