save changes before pull

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,6 +20,8 @@
     </div>
     <div class="section">
         <h3>Get in touch at okorodudukenele@gmail.com </h3>
+        <p><a href="tweets.html">See my tweets</a></p>
+
     </div>
     <section>
         <a href="Alx-logo" target="-blank">
