Fix structure and tweet embed for checker

--- a/tweets.html
+++ b/tweets.html
@@ -7,12 +7,11 @@
 <body>
     <header>
         <h1>Tweet: My Tweet</h1>
-        <section>
+        <nav>
             <ul>
-                <li><a href="index.html">My portfolio</a></li>
-                <li><a href="tweets.html">My Tweet</a></li>
-            </ul>
-        </section>
+                <li><a href="index.html">My portfolio</a></li>       
+             </ul>
+        </nav>
     </header>
     
     <main>
@@ -35,7 +34,11 @@
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
-    <footer><p>Made by Kenele Happiness Okorodudu <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">Portfolio</a></p></footer>
+    <footer>
+        <p>Made by Kenele Happiness Okorodudu 
+            <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">Portfolio</a>
+        </p>
+    </footer>
         
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
