Fix structure to meet checker requirements

--- a/tweets.html
+++ b/tweets.html
@@ -1,42 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Tweet</title>
+  <meta charset="UTF-8">
+  <title>Tweet</title>
 </head>
 <body>
-    <header>
-        <h1>Tweet: My Tweet</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">My portfolio</a></li>
-                <li><a href="tweets.html">My portfolio</a></li>     
-             </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <article>
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">Just wrapped up an exciting month in</p>
-                <a href="https://twitter.com/hashtag/FrontendDev?src=hash&amp;ref_src=twsrc%5Etfw">#FrontendDev</a>! 🚀
-                <br>🔸 Git &amp; GitHub<br>🔸 Terminal mastery<br>🔸 Git Bash skills<br>🔸 VS Code setup<br>🔸 JavaScript basics ✅<br>Next up: DOM, CSS &amp; more code! 💻
-                <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a> 
-                <a href="https://twitter.com/hashtag/ALX_SE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_SE</a>
-                <a href="https://twitter.com/hashtag/ALX_PDBE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_PDBE</a>
-                <a href="https://twitter.com/hashtag/ALX_PDFE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_PDFE</a>
-                <a href="https://twitter.com/hashtag/ALX_FE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_FE</a>
-                <a href="https://twitter.com/hashtag/ALX_BE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_BE</a> 
-                <a href="https://t.co/q5D1lse9Wc">pic.twitter.com/q5D1lse9Wc</a>
-                </p>&mdash; Diva K (@KenileOkorodudu) <a href="https://twitter.com/KenileOkorodudu/status/1926015839293026718?ref_src=twsrc%5Etfw">May 23, 2025</a>
-            </blockquote> 
-        </article>
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
-    <footer><p>Made by Kenele Happiness Okorodudu <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">Portfolio</a></p></footer>
-        
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweet</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <blockquote class="twitter-tweet">
+        <a href="https://twitter.com/KenileOkorodudu/status/1926015839293026718"></a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer><p>Made by Kenele Happiness Okorodudu - <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">here</a>.</p></footer>
 </body>
 </html>
