--- a/index.html
+++ b/index.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="tweets.html">My Tweet</a></li>
-            </ul>
-        </nav>
-    
-    </header>
-    <main>
-        <article>
-            <h1>Welcome To My Portfolio</h1>
-            <p>Hello! I'm Kenele Happiness Okorodudu — a passionate and versatile professional currently learning software engineering at ALX.</p>
-            <p>I have over 3 years of experience as a certified Virtual Assistant and Customer Service Representative. I’m now diving into frontend development with a growing skill set in HTML, CSS, JavaScript, and more.</p>
-            <p>This portfolio is a space to showcase my journey, projects, and how I'm merging tech with business efficiency. Thanks for stopping by — feel free to explore!</p>
-            <h2>Skills & Interests</h2>
-            <p>As an aspiring software engineer, I'm passionate about building digital solutions that solve real-world problems. I'm currently focused on frontend web development, learning technologies like HTML, CSS, JavaScript, and React through the ALX Software Engineering program.</p>
-            <p>With over 3 years of experience as a certified Virtual Assistant and Customer Service Representative, I bring strong organizational and communication skills to every project. I enjoy creating user-friendly interfaces, optimizing workflows, and supporting business growth through smart, efficient systems.</p>
-            <p>My interests lie at the intersection of technology and business — whether it's designing responsive web pages, automating admin tasks, or improving customer experiences, I’m always eager to learn, adapt, and contribute to meaningful progress.</p>
-           
-        </article>
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
-    <footer>
-        <p>Made by Kenele Happiness Okorodudu - <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">Portfolio</a></p>
-        <h3>Get in touch at okorodudukenele@gmail.com</h3>
-        <a href="https://www.alxafrica.com/" target="_blank">
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="150">
-        </a>
-    </footer>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweet</a></li>
+    </ul>
+  </header>
 
+  <main>
+    <article>
+      <h1>Welcome To My Portfolio</h1>
+      <p>Hello! I'm Kenele Happiness Okorodudu — a passionate and versatile professional currently learning software engineering at ALX.</p>
+      <p>I have over 3 years of experience as a certified Virtual Assistant and Customer Service Representative...</p>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer><p>Made by Kenele Happiness Okorodudu - <a href="https://sites.google.com/view/okorodudukenile/my-portfolio" target="_blank">here</a>.</p></footer>
 </body>
 </html>
