--- a/index.html
+++ b/index.html
@@ -17,6 +17,40 @@
       <h1>Welcome To My Portfolio</h1>
       <p>Hello! I'm Kenele Happiness Okorodudu — a passionate and versatile professional currently learning software engineering at ALX.</p>
       <p>I have over 3 years of experience as a certified Virtual Assistant and Customer Service Representative...</p>
+      <div class="learners-table-container">
+    
+        <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Country</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>25</td>
+          <td>USA</td>
+        </tr>
+        <tr>
+          <td>Emily</td>
+          <td>28</td>
+          <td>Canada</td>
+        </tr>
+        <tr>
+          <td>Michael</td>
+          <td>32</td>
+          <td>Australia</td>
+        </tr>
+        <tr>
+          <td>Sophia</td>
+          <td>21</td>
+          <td>UK</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
     </article>
     <aside>
       <p>placeholder to add comment thread later</p>
