--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Kenele Okorodudu - Personal Portfolio</title>
 </head>
 
